[package]
name = "check"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210",features = ["derive"] }
tracing-subscriber = { version = "0.3.18",features = ["env-filter","chrono"] }
tracing = "0.1.40"
actix-web = "4.9.0"
dotenv = "0.15.0"
tracing-appender = "0.2.3"
actix-cors = "0.7.0"
csv = "1.3.1"
serde_json = "1.0.134"
reqwest = "0.12.12"
chrono = "0.4.39"
